# smartedit

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
examples/: sample_output.json
smartedit/: __init__.py  cli.py  config.py  pipeline.py  schemas.py  ui.py  ui_presenter.py
smartedit/extraction/: __init__.py  audio_features.py  masking_features.py  narration_features.py  transition_features.py  visual_features.py
smartedit/fusion/: __init__.py  confidence.py  rubrics.py  scorer.py
smartedit/models/: __init__.py  audio_flamingo_adapter.py  base.py  demucs_adapter.py  librosa_fallback.py  qwen_vl_adapter.py  transnet_adapter.py  whisper_adapter.py
smartedit/preprocessing/: __init__.py  audio_extractor.py  ffmpeg_utils.py  frame_sampler.py
smartedit/prompts/: audio_analysis.txt  qwen_edit_signals.txt
tests/: test_config.py  test_demucs_adapter.py  test_frame_sampler.py  test_fusion.py  test_masking_features.py  test_model_validation.py  test_qwen_validation.py  test_rubrics.py  test_schemas.py  test_timestamp_validation.py  test_ui_presenter.py
