[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smartedit-signals"
version = "0.1.0"
description = "Modular Edit Signal extraction for short videos"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "SmartEdit implementation contributors"}]
dependencies = [
  "accelerate>=1.2",
  "librosa>=0.11",
  "numpy>=1.26",
  "opencv-python-headless>=4.9",
  "Pillow>=10.2",
  "soundfile>=0.12",
  "torch>=2.4",
  "transformers>=5.0,<6",
]

[project.optional-dependencies]
separation = [
  "torchaudio>=2.4",
]
dev = [
  "pytest>=8.2",
  "ruff>=0.9",
]

[project.scripts]
smartedit = "smartedit.cli:main"

[tool.setuptools.packages.find]
include = ["smartedit*"]

[tool.setuptools.package-data]
smartedit = ["prompts/*.txt"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
